# fedoratricks

./: .gitignore  Containerfile  Makefile  fedoratricks.sh  fedoratricks.spec  pyproject.toml  pyvenv.cfg
.github/workflows/: build-rpm.yml
commands/: logs  rpmfusion  template
src/: __init__.py  cli.py  cli_spec.py
src/plugins/: __init__.py  base.py  codecs.py  nvidia.py  rpmfusion.py  template.py
tests/: fedoratricks.bats  logs.bats  rpmfusion.bats
tests/mocks/: dnf  rpm
